{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 5853,
  "lineage": "fe887520-abfe-fd6a-0af3-6ffd8cb82a83",
  "resources": [
    {
      "module": "module.neo4j_db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "neo4j-allow-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7474"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-15T22:17:37.658-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webcrawler-450417/global/firewalls/neo4j-allow-internet",
            "log_config": [],
            "name": "neo4j-allow-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc",
            "priority": 1000,
            "project": "webcrawler-450417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/firewalls/neo4j-allow-internet",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.neo4j_db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "neo4j-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7687"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-15T22:17:33.413-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webcrawler-450417/global/firewalls/neo4j-allow-internal",
            "log_config": [],
            "name": "neo4j-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc",
            "priority": 1000,
            "project": "webcrawler-450417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/firewalls/neo4j-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "neo4j"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.neo4j_db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "neo4j",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/zones/us-central1-a/disks/neo4j-community"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-05-15T22:17:52.225-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/webcrawler-450417/zones/us-central1-a/instances/neo4j-community",
            "instance_id": "1073120895050675311",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "Kpvnz7AgWEs=",
            "metadata_startup_script": "#!/bin/bash\nwget -O - https://debian.neo4j.com/neotechnology.gpg.key | sudo apt-key add -\necho 'deb https://debian.neo4j.com stable 5' | sudo tee /etc/apt/sources.list.d/neo4j.list\nsudo apt-get update\nsudo apt-get install -y neo4j\n\n# Ensure SSH daemon is enabled and started\nsudo systemctl enable ssh\nsudo systemctl start ssh\n\nsudo ufw allow 22\nsudo ufw allow 7474\nsudo ufw allow 7687\n\n# Download the CQL file to /\ncurl -o /home/neo4j/create-ind [...]
            "name": "neo4j-community",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.9.229.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/regions/us-central1/subnetworks/private-subnet-1",
                "subnetwork_project": "webcrawler-450417"
              }
            ],
            "project": "webcrawler-450417",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/zones/us-central1-a/instances/neo4j-community",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "iap-ssh",
              "neo4j"
            ],
            "tags_fingerprint": "U5T5jQL2YHQ=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.custom_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-15T22:17:26.960-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/webcrawler-450417/global/firewalls/custom-vpc-allow-iap-ssh",
            "log_config": [],
            "name": "custom-vpc-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc",
            "priority": 1000,
            "project": "webcrawler-450417",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/firewalls/custom-vpc-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "WebCrawler VPC network",
            "enable_ula_internal_ipv6": false,
            "id": "projects/webcrawler-450417/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4011907161592132792",
            "numeric_id": "4011907161592132792",
            "project": "webcrawler-450417",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "custom_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-15T22:17:30.181-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/webcrawler-450417/regions/us-central1/subnetworks/private-subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "webcrawler-450417",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/webcrawler-450417/regions/us-central1/subnetworks/private-subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 3988804128780022917
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}